Solved the overlapping problem.
Body was overlapping with the sidebar when the browser window is shrunk.

--- a/themes/single_html/assets/css/docs.less
+++ b/themes/single_html/assets/css/docs.less
@@ -63,7 +63,8 @@ body {
     padding: 27px 30px 15px;
     width: 300px;
     display: inline-block;  
-	height:95%;
+    height:95%;
+    background-color: #F0EEEE;
 
 
     input#search {
